<resources>
    <string name="app_name">Quiz</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="start_quiz">Start Quiz</string>
    <string name="view_score">View Scores</string>
    <string name="view_question">View Questions</string>
    <string name="register_message">Please register to use this app</string>
    <string name="full_name">Full Name</string>
    <string name="err_full_name">Enter your name first!</string>
    <string name="submit">Submit</string>
</resources>
