<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/textMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorPrimaryText"
            android:text="Pick a question you wish to answer"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnStartQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/start_quiz"
            android:textColor="@android:color/white"
            android:background="@drawable/button_selector"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/view_question"
            android:textColor="@android:color/white"
            android:background="@drawable/button_selector"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnViewScores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/view_score"
            android:textColor="@android:color/white"
            android:background="@drawable/button_selector"
            android:textStyle="bold" />

    </android.support.v7.widget.LinearLayoutCompat>


</android.support.design.widget.CoordinatorLayout>